Add endpoint for creating user in Cognito along with associated roles
